<resources>
    <string name="app_name">comel-app</string>
    <string name="header">COMEL App</string>
    <string name="header_sub">Care of Your Mental Health</string>
    <string name="have_account">Have an account?</string>
    <string name="log_in">Log In</string>
    <string name="log_in_underlined"><u>Log In</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="community">Community</string>
    <string name="therapy">Therapy</string>
    <string name="settings">Settings</string>
    <string name="home_greeting">Welcome back,</string>
    <string name="user_name">Nik Nocturnal</string>

    <string name="lorem">Lorem ipsum dolor sit amet,
        consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
        dolore magna aliqua.</string>
    
    <string name="friends">Friends</string>
    <string name="interests">Interests</string>
    <string name="group">Group</string>
    <string name="search">Search people by keywords</string>

    <string name="your_friends">Your Friends</string>
    <string name="name_placeholder">Jesse Cash</string>
    <string name="username_placeholder">\@jesse_cash</string>
    <string name="chat">Chat</string>
    <string name="mohon_tunggu">Mohon Tunggu</string>
    <string name="send">Send</string>
    <string name="post_hint">What\'s on your mind?</string>
</resources>