<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.LandingFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:background="@color/purple_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/backButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/arrow_back"
                    app:backgroundTint="@color/black"
                    tools:ignore="TouchTargetSizeCheck">
                </Button>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:background="@drawable/ic_header_background"
            android:layout_width="match_parent"
            android:layout_height="50dp">
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:gravity="center"
            android:fontFamily="@font/comfortaa"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/mid_grey"
            android:layout_marginBottom="30dp">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:gravity="center"
            android:textSize="15sp"
            android:fontFamily="@font/comfortaa"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/nameTextField"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/custom_input"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="20dp"
            android:textSize="15sp"
            android:paddingStart="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:gravity="center"
            android:textSize="15sp"
            android:fontFamily="@font/comfortaa"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/emailTextField"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/custom_input"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="20dp"
            android:textSize="15sp"
            android:paddingStart="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:gravity="center"
            android:textSize="15sp"
            android:fontFamily="@font/comfortaa"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/passwordTextField"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/custom_input"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="20dp"
            android:textSize="15sp"
            android:paddingStart="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:gravity="center"
            android:textSize="15sp"
            android:fontFamily="@font/comfortaa"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/maleRadioButton"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_male"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/custom_radio"
                    android:button="@drawable/null_radio"
                    android:text="@string/male"
                    android:textSize="15sp"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="5dp"
                    android:gravity="center"
                    android:fontFamily="@font/comfortaa"/>
                <RadioButton
                    android:id="@+id/femaleRadioButton"
                    android:layout_width="90dp"
                    android:layout_height="58dp"
                    android:drawableTop="@drawable/ic_female2"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/custom_radio"
                    android:button="@drawable/null_radio"
                    android:text="@string/female"
                    android:textSize="15sp"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="5dp"
                    android:gravity="center"
                    android:fontFamily="@font/comfortaa"/>
                <RadioButton
                    android:id="@+id/otherRadioButton"
                    android:layout_width="90dp"
                    android:layout_height="58dp"
                    android:drawableTop="@drawable/ic_other"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/custom_radio"
                    android:button="@drawable/null_radio"
                    android:text="@string/other"
                    android:textSize="15sp"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="5dp"
                    android:gravity="center"
                    android:fontFamily="@font/comfortaa"/>
            </RadioGroup>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/register"
                android:background="@drawable/custom_button_black"
                app:backgroundTint="@color/black"
                android:layout_marginHorizontal="40dp"
                android:fontFamily="@font/comfortaa"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>


    </LinearLayout>
</ScrollView>
