<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="105dp"
                android:orientation="horizontal"
                android:paddingTop="20dp">

                <ImageView
                    android:id="@+id/appLogo"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="15dp"
                    android:background="@color/mid_grey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/comfortaa"
                        android:text="@string/home_greeting"
                        android:textColor="@color/mid_grey"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/usernameTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/comfortaa"
                        android:text="@string/user_name"
                        android:textColor="@color/mid_grey"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/card"
                android:orientation="vertical"
                android:padding="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/postPictHolder"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="top"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/picture_placeholder" />

                        <Button
                            android:id="@+id/pictureButton"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/ic_picture"
                            app:backgroundTint="@color/black" />

                    </LinearLayout>

                    <EditText
                        android:id="@+id/postTextfield"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:gravity="top"
                        android:hint="@string/post_hint"
                        android:inputType="text|textMultiLine"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/sendButton"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:background="@drawable/chat_button"
                        android:fontFamily="@font/comfortaa"
                        android:text="@string/send"
                        android:textAllCaps="false"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:backgroundTint="@color/black" />

                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPost"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:elevation="4dp"
        android:orientation="horizontal"
        app:itemIconTint="@color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <RadioGroup
            android:id="@+id/navbarGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/homeNavbar"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/homeNavbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="13dp"
                android:layout_marginVertical="5dp"
                android:background="@drawable/custom_bottom_navbar"
                android:button="@drawable/null_radio"
                android:drawableTop="@drawable/ic_home_page"
                android:fontFamily="@font/comfortaa"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:text="@string/home"
                android:textSize="10sp" />

            <RadioButton
                android:id="@+id/communityNavbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="13dp"
                android:layout_marginVertical="5dp"
                android:background="@drawable/custom_bottom_navbar"
                android:button="@drawable/null_radio"
                android:drawableTop="@drawable/ic_people"
                android:fontFamily="@font/comfortaa"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:text="@string/community"
                android:textSize="10sp" />

            <RadioButton
                android:id="@+id/therapyNavbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="13dp"
                android:layout_marginVertical="5dp"
                android:background="@drawable/custom_bottom_navbar"
                android:button="@drawable/null_radio"
                android:drawableTop="@drawable/ic_health"
                android:fontFamily="@font/comfortaa"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:text="@string/therapy"
                android:textSize="10sp" />

            <RadioButton
                android:id="@+id/settingsNavbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="13dp"
                android:layout_marginVertical="5dp"
                android:background="@drawable/custom_bottom_navbar"
                android:button="@drawable/null_radio"
                android:drawableTop="@drawable/ic_settings"
                android:fontFamily="@font/comfortaa"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:text="@string/settings"
                android:textSize="10sp" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>